--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -9,7 +9,7 @@
     <ui:define name="title">
         <h:outputText value="#{bundle.FolderExplorer}"></h:outputText>
     </ui:define>
-
+    
     <!-- специфичные поля поиска -->
     <ui:define name="searche">        
         <p:outputLabel value="#{bundle.Number}"/>
@@ -81,9 +81,14 @@
                     onstart="return isClose = 1;"
                     rendered="#{explorerBean.isItemHaveAttache(item)}"
                     action="#{docsBean.attacheDownLoad(item.getAttache())}"/>
+        <p:separator />
         <p:menuitem icon="ui-icon-plus" value="#{bundle.ADD_VERSION}"
                     rendered="#{item.getClass().getSimpleName() == 'Doc'}"
                     actionListener="#{sessionBean.openAttacheAddForm(item)}"/>
+        <p:menuitem icon="ui-icon-clipboard" value="#{bundle.AddVersionFromScan}"
+                    rendered="#{item.getClass().getSimpleName() == 'Doc'}"
+                    actionListener="#{explorerBean.onSetCurrentItem(item)}"
+                    oncomplete="document.getElementById('#{_frmExpl}:btnScan').click();"/> 
         <p:separator />
         <p:menuitem icon="ui-icon-folder-open" value="#{bundle.ShowInFolder}" 
                     rendered="#{item.getClass().getSimpleName() == 'Doc'}"                    
