--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
@@ -3,16 +3,7 @@
                  xmlns:p="http://primefaces.org/ui"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
     
-    <style>
-        .noPadding{
-            padding-left: 0px !important;
-            padding-right: 0px !important;
-            padding-bottom: 2px !important;
-            padding-top: 2px !important;
-        }
-    </style>    
-    
-    <p:tab title="#{bundle.Rights}" rendered="#{_bean.editedItem != null}">    
+    <p:tab title="#{bundle.RightsForObject}" rendered="#{_bean.editedItem != null}">    
 
         <p:selectBooleanCheckbox value="#{_bean.editedItem.inherits}" id="inherits"                                 
                                  disabled="#{_bean.isReadOnly() || !_bean.isHaveRightChangeRight()}"
@@ -45,7 +36,10 @@
                                 <p:selectBooleanCheckbox value="#{right.create}" disabled="true"/>
                             </p:column>
                             <p:column headerText="#{bundle.Remove}" >
-                                <p:selectBooleanCheckbox value="#{right.delete}"  disabled="true"/>
+                                <p:selectBooleanCheckbox value="#{right.delete}" disabled="true"/>
+                            </p:column>
+                            <p:column headerText="#{bundle.AddChildsRight}">
+                                <p:selectBooleanCheckbox value="#{right.addChild}" disabled="true"/>
                             </p:column>
                             <p:column headerText="#{bundle.ChangeRight}" >
                                 <p:selectBooleanCheckbox value="#{right.changeRight}" disabled="true"/>
